--- a/inventory-service/app/views/main.scala.html
+++ b/inventory-service/app/views/main.scala.html
@@ -10,6 +10,8 @@
     <title>@title</title>
     <link rel="stylesheet" href="@routes.Assets.at("css/bootstrap.min.css")" >
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="stylesheet" href="@routes.Assets.at("css/bootstrap-slider.css")" >
+    <link rel="stylesheet" href="@routes.Assets.at("css/bootstrap-slider.min.css")" >
     <style type="text/css">
         body {
         padding-bottom: 40px;
@@ -20,8 +22,10 @@
     </style>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/parsley.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-slider.min.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/jquery.color-2.1.2.min.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
