--- a/inventory-service/resources/templates/base.html
+++ b/inventory-service/resources/templates/base.html
@@ -3,38 +3,29 @@
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Welcome to inventory-service</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" media="screen" href="stylesheets/main.css"/>
+    <link rel="stylesheet" href="css/bootstrap-slider.css"/>
+    <link rel="stylesheet" href="css/bootstrap-slider.min.css"/>
+    <style type="text/css">
+      body {
+      padding-bottom: 40px;
+      }
+      .btn-text-bottom {
+      vertical-align:text-bottom;
+      }
+    </style>
+    <script src="js/jquery-1.9.0.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap-slider.min.js" type="text/javascript"></script>
+    <script src="js/jquery.color-2.1.2.min.js" type="text/javascript"></script>
   </head>
   <body>
-    <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{{servlet-context}}/">inventory-service</a>
-        </div>
-        <div class="navbar-collapse collapse ">
-          <ul class="nav navbar-nav">
-            <li {% ifequal page "home.html" %} class="active"{%endifequal%}>
-              <a href="{{servlet-context}}/">Home</a>
-            </li>
-            <li {% ifequal page "about.html" %} class="active"{%endifequal%}>
-              <a href="{{servlet-context}}/about">About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
     <div class="container">
       {% block content %}
       {% endblock %}
     </div>
-    <!-- scripts and styles -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-    {% style "/css/screen.css" %}
 
-    <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
