--- a/store-inventory-service/app/views/main.scala.html
+++ b/store-inventory-service/app/views/main.scala.html
@@ -25,7 +25,7 @@
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/parsley.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap-slider.min.js")" type="text/javascript"></script>
-	<script src="@routes.Assets.at("javascripts/jquery.color-2.1.2.min.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/jquery.color-2.1.2.min.js")"` type="text/javascript"></script>
     </head>
     <body>
         @content
