--- a/inventory-service/resources/templates/home.html
+++ b/inventory-service/resources/templates/home.html
@@ -27,7 +27,7 @@
       <div class="col-sm-10 slider">
         <input class="form-control" id="errorRate" data-slider-id='errorRateSlider'
                type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1"
-               data-slider-value="{{settings.errorRate * 100}}"/>
+               data-slider-value="{{settings.errorRatePct}}"/>
       </div>
     </div>
     <div class="form-group" id="minLatencyGroup">
@@ -51,7 +51,7 @@
 </div>
 <script type="text/javascript">
 	$().ready(function(){
-	   updateTitle(0);
+	   updateTitle({{settings.errorRatePct}});
 	   $('#setButton').click(function(){
 			var latency =$('#latency').val().split(',').map(Number)
 			var data =  {
