--- a/inventory-service/resources/templates/home.html
+++ b/inventory-service/resources/templates/home.html
@@ -17,13 +17,15 @@
     <h1 id="title">Inventory Service</h1>
   </div>
 </div>
+<div id="errorMsg" class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Ruh-roh!</strong> There was a problem saving your settings.
+</div>
 <div class="container">
-  <p>
-    Set the error rates and min/max latency below…
-  </p>
-  <div id="errorMsg" class="alert alert-danger alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Ruh-roh!</strong> There was a problem saving your settings.
+  <div>
+    <p>
+      Set the error rates and min/max latency below…
+    </p>
   </div>
   <div class="form-horizontal" role="form" id="theForm" >
     <div class="form-group" id="errorRateGroup">
