--- a/store-inventory-service/app/views/index.scala.html
+++ b/store-inventory-service/app/views/index.scala.html
@@ -22,38 +22,40 @@
 		<h1 id="title">Inventory Service</h1>
 	</div>
 </div>
-	<div class="container">
+<div class="container">
+	<div>
 		<p>
 			Set the error rates and min/max latency below…
 		</p>
-		<div class="form-horizontal" role="form" id="theForm" >
-			<div class="form-group" id="errorRateGroup">
-				<label id="errorRateLabel" class="col-sm-2 control-label" for="errorRate">Error Rate</label>
-				<div class="col-sm-10 slider">
-					<input class="form-control" id="errorRate" data-slider-id='errorRateSlider'
-						   type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1"
-						   data-slider-value="@{errorRate * 100}"/>
-				</div>
+	</div>
+	<div class="form-horizontal" role="form" id="theForm" >
+		<div class="form-group" id="errorRateGroup">
+			<label id="errorRateLabel" class="col-sm-2 control-label" for="errorRate">Error Rate</label>
+			<div class="col-sm-10 slider">
+				<input class="form-control" id="errorRate" data-slider-id='errorRateSlider'
+					   type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1"
+					   data-slider-value="@{errorRate * 100}"/>
 			</div>
-			<div class="form-group" id="minLatencyGroup">
-				<label class="col-sm-2 control-label" for="latency">Latency</label>
-				<div class="col-sm-10 slider">
-					<b class="slide-label">0</b>
-					<input class="form-control" id="latency" type="text"value=""
-						   data-slider-min="0" data-slider-max="2500" data-slider-step="25"
-						   data-slider-value="[@{minDelay},@{maxDelay}]"/>
-					<b class="slide-label">2500 millis</b>
-				</div>
-			 </div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<button type="button" class="btn btn-default col-sm-4" id="setButton">Set</button>
-				</div>
+		</div>
+		<div class="form-group" id="minLatencyGroup">
+			<label class="col-sm-2 control-label" for="latency">Latency</label>
+			<div class="col-sm-10 slider">
+				<b class="slide-label">0</b>
+				<input class="form-control" id="latency" type="text"value=""
+					   data-slider-min="0" data-slider-max="2500" data-slider-step="25"
+					   data-slider-value="[@{minDelay},@{maxDelay}]"/>
+				<b class="slide-label">2500 millis</b>
 			</div>
-
+		 </div>
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="button" class="btn btn-default col-sm-4" id="setButton">Set</button>
+			</div>
 		</div>
 
 	</div>
+
+</div>
 <script type="text/javascript">
 	$().ready(function(){
 	   updateTitle(@{errorRate * 100});
