--- a/store-inventory-service/app/views/main.scala.html
+++ b/store-inventory-service/app/views/main.scala.html
@@ -28,6 +28,8 @@
 	<script src="@routes.Assets.at("javascripts/jquery.color-2.1.2.min.js")"` type="text/javascript"></script>
     </head>
     <body>
+        <div class="container">
         @content
+        </div>
     </body>
 </html>
