--- a/availability-service/resources/templates/home.html
+++ b/availability-service/resources/templates/home.html
@@ -64,7 +64,8 @@
 			var data =  {
 				errorRate:Number($('#errorRate').val())/100,
 				minLatency:latency[0],
-				maxLatency:latency[1]
+				maxLatency:latency[1],
+				errorLatency:2500
 			}
 
 			$.ajax( {
